--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
         </div>
       </div>
     </nav>
-    <section class="py-5 bg-peach">
+    <section class="py-5 bg-dark">
       <div class="container">
         <div class="d-md-flex flex-row align-items-center justify-content-between py-5">
           <div class="w-50">
             <img src="/img/about.svg" alt="" class="d-lg-block d-none w-100 mr-5" />
           </div>
           <div class="mx-lg-5 mx-0 text-justify">
-            <h1 class="text-white p-lg-5 p-0">
+            <h1 class="text-white px-lg-5 py-lg-3 p-0">
               Welcome to <span class="text-purple">Jake Whatling's</span> webdev portfolio
             </h1>
-            <h3 class="text-left px-5 py-2 text-white h3">This is my hub for:</h3>
-            <ul class="px-5 list-unstyled">
-              <li class="text-white p-2 h4 fw-light">Showcasing <span class="text-purple fw-bolder">projects</span></li>
-              <li class="text-white p-2 h4 fw-light">Tracking my <span class="text-purple fw-bolder">skills</span></li>
-              <li class="text-white p-2 h4 fw-light">
+            <h3 class="text-left px-0 py-3 px-lg-5 py-lg-0 py-1 text-white h3">This is my hub for:</h3>
+            <ul class="px-lg-5 list-unstyled">
+              <li class="text-white px-3 h4 fw-light">Tracking my <span class="text-purple fw-bolder">skills</span></li>
+              <li class="text-white px-3 h4 fw-light">
+                Showcasing <span class="text-purple fw-bolder">projects</span>
+              </li>
+              <li class="text-white px-3 h4 fw-light">
                 Publishing <span class="text-purple fw-bolder">updates</span> about my journey
               </li>
             </ul>
@@ -52,6 +54,13 @@
         </div>
       </div>
     </section>
+    <section class="py-5 bg-white">
+      <div class="container">
+        <h1 class="text-dark text-center">Skills</h1>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
