--- a/index.html
+++ b/index.html
@@ -30,26 +30,39 @@
         </div>
       </div>
     </nav>
-    <section class="py-5 bg-dark">
-      <div class="container">
-        <div class="d-md-flex flex-row align-items-center justify-content-between py-5">
-          <div class="w-50">
-            <img src="/img/about.svg" alt="" class="d-lg-block d-none w-100 mr-5" />
-          </div>
-          <div class="mx-lg-5 mx-0 text-justify">
-            <h1 class="text-white px-lg-5 py-lg-3 p-0">
-              Welcome to <span class="text-purple">Jake Whatling's</span> webdev portfolio
-            </h1>
-            <h3 class="text-left px-0 py-3 px-lg-5 py-lg-0 py-1 text-white h3">This is my hub for:</h3>
-            <ul class="px-lg-5 list-unstyled">
-              <li class="text-white px-3 h4 fw-light">Tracking my <span class="text-purple fw-bolder">skills</span></li>
-              <li class="text-white px-3 h4 fw-light">
-                Showcasing <span class="text-purple fw-bolder">projects</span>
-              </li>
-              <li class="text-white px-3 h4 fw-light">
-                Publishing <span class="text-purple fw-bolder">updates</span> about my journey
-              </li>
-            </ul>
+    <section class="py-3 bg-dark">
+      <div class="bg-image" style="background-image: url('/img/forest-night-.png')">
+        <div class="container">
+          <div
+            class="d-md-flex flex-lg-row flex-md-column align-items-lg-center align-items-md-start justify-content-lg-around justify-content-md-between py-5"
+          >
+            <!-- <div class="w-50">
+              <img src="/img/forest.png" alt="" class="d-lg-block d-none w-100 mr-5" />
+            </div> -->
+            <div class="text-justify w-auto">
+              <h1
+                class="text-white p-0"
+                style="text-shadow: -2px -2px 2px rgba(255, 255, 255, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.5)"
+              >
+                Welcome to
+                <span class="bg-purple text-white px-3" style="transform: skew(10deg)">Jake Whatling's</span> corner of
+                the internet
+              </h1>
+            </div>
+            <div class="w-auto">
+              <ul class="px-3 py-2 list-unstyled bg-dark rounded shadow">
+                <h3 class="text-left p-lg-2 bg-dark text-white h3">This is my hub for:</h3>
+                <li class="text-white px-lg-3 h4 fw-light">
+                  Tracking my <span class="text-purple fw-bold">skills</span>
+                </li>
+                <li class="text-white px-lg-3 h4 fw-light">
+                  Showcasing <span class="text-purple fw-bold">projects</span>
+                </li>
+                <li class="text-white px-lg-3 h4 fw-light">
+                  Publishing <span class="text-purple fw-bold">updates</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
