Changed background for section 1 and restyled flex

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </div>
       </div>
     </nav>
-    <section class="py-3 bg-dark">
+    <section class="py-3 bg-dark h-100">
       <div class="bg-image" style="background-image: url('/img/forest-night-.png')">
-        <div class="container">
+        <div class="container py-5">
           <div
             class="d-md-flex flex-lg-row flex-md-column align-items-lg-center align-items-md-start justify-content-lg-around justify-content-md-between py-5"
           >
@@ -45,7 +45,7 @@
                 style="text-shadow: -2px -2px 2px rgba(255, 255, 255, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.5)"
               >
                 Welcome to
-                <span class="bg-purple text-white px-3" style="transform: skew(10deg)">Jake Whatling's</span> corner of
+                <span class="bg-purple text-light px-3" style="transform: skew(10deg)">Jake Whatling's</span> corner of
                 the internet
               </h1>
             </div>
@@ -67,9 +67,9 @@
         </div>
       </div>
     </section>
-    <section class="py-5 bg-white">
+    <section class="py-5 bg-dark">
       <div class="container">
-        <h1 class="text-dark text-center">Skills</h1>
+        <h1 class="text-light text-center">Skills</h1>
       </div>
     </section>
     <section></section>
