--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Jake Whatling</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <nav class="navbar bg-dark navbar-expand-md navbar-dark py-3 fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#about">Jake Whatling</a>
@@ -30,38 +30,88 @@
         </div>
       </div>
     </nav>
-    <section class="py-3 bg-dark h-100">
-      <div class="bg-image" style="background-image: url('/img/forest-night-.png')">
-        <div class="container py-5">
-          <div
-            class="d-md-flex flex-lg-row flex-md-column align-items-lg-center align-items-md-start justify-content-lg-around justify-content-md-between py-5"
-          >
-            <!-- <div class="w-50">
-              <img src="/img/forest.png" alt="" class="d-lg-block d-none w-100 mr-5" />
-            </div> -->
-            <div class="text-justify w-auto">
-              <h1
-                class="text-white p-0"
-                style="text-shadow: -2px -2px 2px rgba(255, 255, 255, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.5)"
+    <section class="p-5 h-auto bg-image" style="background-image: url('./img/forest-night-.png')">
+      <div class="container py-5">
+        <div class="d-block d-sm-flex flex-lg-row flex-sm-column py-5">
+          <h1 class="landing-title text-white w-75 py-5">
+            Welcome to <span class="bg-purple px-lg-3">Jake Whatling's</span> corner of the internet
+          </h1>
+          <div class="bg-purple-low w-auto rounded my-5 py-3">
+            <h2 class="text-white px-lg-5 px-md-2 py-3">
+              The
+              <span class="text-white h1">Hub</span>
+              for:
+            </h2>
+            <ul class="list-unstyled">
+              <li class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly align-items-center">
+                <h4>Showcasing</h4>
+                <h4 class="bg-white text-purple px-2 mx-2">Projects</h4>
+              </li>
+              <li class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly align-items-center">
+                <h4>Tracking my</h4>
+                <h4 class="bg-white text-purple px-2 mx-2">Skills</h4>
+              </li>
+              <li
+                class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly justify-content-sm-start align-items-center"
               >
-                Welcome to
-                <span class="bg-purple text-light px-3" style="transform: skew(10deg)">Jake Whatling's</span> corner of
-                the internet
-              </h1>
+                <h4>Publishing</h4>
+                <h4 class="bg-white text-purple px-2 mx-2">Updates</h4>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-white">
+      <h1 class="text-light text-center bg-dark py-5">Stack</h1>
+      <div class="container py-5 d-flex flex-column">
+        <div class="stack-options bg-white d-flex justify-content-center">
+          <h3 class="option text-secondary">Frontend</h3>
+          <h3 class="mx-2">|</h3>
+          <h3 class="option text-secondary">Backend</h3>
+        </div>
+        <div class="backend d-sm-flex align-items-sm-start">
+          <img class="backend-image align-self-start py-5 w-50" src="./img/server-cluster-light.svg" alt="" />
+          <div class="d-flex flex-column">
+            <div class="jumbotron">
+              <h1 class="display-4">Backend Technologies</h1>
+              <p class="lead">NodeJS, Express, MongoDB, Mongoose, JWT's</p>
+              <hr class="my-4" />
+              <p>
+                I possess a well-rounded knowledge of programming concepts and particularly enjoy building and
+                implementing backend processes of web applications, developing & consuming REST API's. NodeJS & Express
+                are the foundations of my full-stack projects
+              </p>
             </div>
-            <div class="w-auto">
-              <ul class="px-3 py-2 list-unstyled bg-dark rounded shadow">
-                <h3 class="text-left p-lg-2 bg-dark text-white h3">This is my hub for:</h3>
-                <li class="text-white px-lg-3 h4 fw-light">
-                  Tracking my <span class="text-purple fw-bold">skills</span>
-                </li>
-                <li class="text-white px-lg-3 h4 fw-light">
-                  Showcasing <span class="text-purple fw-bold">projects</span>
-                </li>
-                <li class="text-white px-lg-3 h4 fw-light">
-                  Publishing <span class="text-purple fw-bold">updates</span>
-                </li>
-              </ul>
+            <div class="logo-container d-lg-flex flex-row position-relative">
+              <a href="https://nodejs.org/en/">
+                <img
+                  src="/img/nodejs-icon.svg"
+                  alt=""
+                  class="node-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                />
+              </a>
+              <a href="https://www.mongodb.com/">
+                <img
+                  src="./img/mongodb-icon.svg"
+                  alt=""
+                  class="mongo-icon bg-white shadow rounded position-absolute mx-2 px-3"
+                />
+              </a>
+              <a href="https://jwt.io">
+                <img
+                  src="./img/jwt-icon-sm.svg"
+                  alt=""
+                  class="jwt-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                />
+              </a>
+              <a href="https://expressjs.com/">
+                <img
+                  src="./img/express-icon.svg"
+                  alt=""
+                  class="express-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -69,11 +119,19 @@
     </section>
     <section class="py-5 bg-dark">
       <div class="container">
-        <h1 class="text-light text-center">Skills</h1>
+        <h1 class="text-light text-center">Projects</h1>
       </div>
     </section>
-    <section></section>
-    <section></section>
+    <section class="py-5 bg-dark">
+      <div class="container">
+        <h1 class="text-light text-center">Updates</h1>
+      </div>
+    </section>
+    <section class="py-5 bg-dark">
+      <div class="container">
+        <h1 class="text-light text-center">Contact</h1>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
