--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
             Welcome to <span class="bg-purple px-lg-3">Jake Whatling's</span> corner of the internet
           </h1>
           <div class="bg-purple-low w-auto rounded my-5 py-3">
-            <h2 class="text-white px-lg-5 px-md-2 py-3">
+            <h2 class="text-white px-lg-5 px-2 py-3">
               The
               <span class="text-white h1">Hub</span>
               for:
             </h2>
             <ul class="list-unstyled">
-              <li class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly align-items-center">
+              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
                 <h4>Showcasing</h4>
                 <h4 class="bg-white text-purple px-2 mx-2">Projects</h4>
               </li>
-              <li class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly align-items-center">
+              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
                 <h4>Tracking my</h4>
                 <h4 class="bg-white text-purple px-2 mx-2">Skills</h4>
               </li>
               <li
-                class="text-white px-lg-5 px-md-3 h5 d-flex justify-content-lg-evenly justify-content-sm-start align-items-center"
+                class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly justify-content-sm-start align-items-center"
               >
                 <h4>Publishing</h4>
                 <h4 class="bg-white text-purple px-2 mx-2">Updates</h4>
@@ -64,23 +64,51 @@
     </section>
     <section class="bg-white">
       <h1 class="text-light text-center bg-dark py-5">Stack</h1>
+      <!-- <div class="stack-options bg-white d-none d-md-flex justify-content-center">
+        <h3 class="option opt-active text-secondary" data-target="#frontend">Frontend</h3>
+        <h3 class="mx-2">|</h3>
+        <h3 class="option text-secondary" data-target="#backend">Backend</h3>
+      </div> -->
       <div class="container py-5 d-flex flex-column">
-        <div class="stack-options bg-white d-flex justify-content-center">
-          <h3 class="option text-secondary">Frontend</h3>
-          <h3 class="mx-2">|</h3>
-          <h3 class="option text-secondary">Backend</h3>
+        <div class="frontend d-md-flex align-items-sm-start py-5" id="frontend">
+          <img class="d-none d-md-block backend-image align-self-start py-5 w-50" src="./img/createive.svg" alt="" />
+          <div class="d-flex flex-column">
+            <div class="jumbotron">
+              <h1 class="display-4">Frontend Technologies</h1>
+              <p class="lead">
+                <span class="text-white px-3 py-1 bg-html">HTML</span>
+                <span class="text-white px-3 py-1 bg-css">CSS</span>
+                <span class="text-white px-3 py-1 bg-bootstrap fw-bolder">Bootstrap</span>
+                <span class="bg-js text-dark px-3 py-1 fw-bold">JS</span>
+                <span class="text-white px-3 py-1 bg-react fw-bolder">React</span>
+              </p>
+              <hr class="my-4" />
+              <p></p>
+            </div>
+            <div class="logo-container d-lg-flex flex-row position-relative"></div>
+          </div>
         </div>
-        <div class="backend d-sm-flex align-items-sm-start">
-          <img class="backend-image align-self-start py-5 w-50" src="./img/server-cluster-light.svg" alt="" />
+        <div class="backend d-md-flex d-sm-flex align-items-sm-start py-5" id="backend">
+          <img
+            class="d-none d-md-block backend-image align-self-start py-5 w-50"
+            src="./img/server-cluster-light.svg"
+            alt=""
+          />
           <div class="d-flex flex-column">
             <div class="jumbotron">
               <h1 class="display-4">Backend Technologies</h1>
-              <p class="lead">NodeJS, Express, MongoDB, Mongoose, JWT's</p>
+              <p class="lead">
+                <span class="text-white px-3 py-1 bg-nodejs">Node JS</span>
+                <span class="text-dark px-3 py-1 bg-express fw-bolder shadow">Express</span>
+                <span class="text-white px-3 py-1 bg-mongodb fw-bolder">MongoDB</span>
+                <span class="text-white px-3 py-1 bg-mongoose fw-bold">Mongoose</span>
+                <span class="text-white px-3 py-1 bg-jwt fw-bold">JWT</span>
+              </p>
               <hr class="my-4" />
               <p>
                 I possess a well-rounded knowledge of programming concepts and particularly enjoy building and
                 implementing backend processes of web applications, developing & consuming REST API's. NodeJS & Express
-                are the foundations of my full-stack projects
+                are the foundations of my full-stack projects.<br />
               </p>
             </div>
             <div class="logo-container d-lg-flex flex-row position-relative">
@@ -137,5 +165,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="/index.js"></script>
   </body>
 </html>
