Stacks section progress

--- a/index.html
+++ b/index.html
@@ -64,15 +64,10 @@
     </section>
     <section class="bg-white">
       <h1 class="text-light text-center bg-dark py-5">Stack</h1>
-      <!-- <div class="stack-options bg-white d-none d-md-flex justify-content-center">
-        <h3 class="option opt-active text-secondary" data-target="#frontend">Frontend</h3>
-        <h3 class="mx-2">|</h3>
-        <h3 class="option text-secondary" data-target="#backend">Backend</h3>
-      </div> -->
       <div class="container py-5 d-flex flex-column">
         <div class="frontend d-md-flex align-items-sm-start py-5" id="frontend">
-          <img class="d-none d-md-block backend-image align-self-start py-5 w-50" src="./img/createive.svg" alt="" />
-          <div class="d-flex flex-column">
+          <img class="d-none d-md-block backend-image align-self-start py-5 mr-5 w-50" src="./img/createive.svg" alt="" />
+          <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4">Frontend Technologies</h1>
               <p class="lead">
@@ -83,18 +78,27 @@
                 <span class="text-white px-3 py-1 bg-react fw-bolder">React</span>
               </p>
               <hr class="my-4" />
-              <p></p>
+              <p class="h5 fw-light">
+                Designing and styling pleasing UI features for web applications relies on my creativity and great attention to detail. I have developed the following frontend skills from developing my projects:
+                <ul class="list-unstyled">
+                  <li class="px-3">Blueprinting UI sections</li>
+                  <li class="px-3">Designing colour schemes</li>
+                  <li class="px-3">Building UI elements</li>
+                  <li class="px-3">Adding functionality to components</li>
+                </ul>
+              </p>
             </div>
             <div class="logo-container d-lg-flex flex-row position-relative"></div>
           </div>
         </div>
+        <hr>
         <div class="backend d-md-flex d-sm-flex align-items-sm-start py-5" id="backend">
           <img
-            class="d-none d-md-block backend-image align-self-start py-5 w-50"
+            class="d-none d-md-block backend-image align-self-start py-5 mt-5 w-50"
             src="./img/server-cluster-light.svg"
             alt=""
           />
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4">Backend Technologies</h1>
               <p class="lead">
@@ -105,7 +109,7 @@
                 <span class="text-white px-3 py-1 bg-jwt fw-bold">JWT</span>
               </p>
               <hr class="my-4" />
-              <p>
+              <p class="h5 fw-light">
                 I possess a well-rounded knowledge of programming concepts and particularly enjoy building and
                 implementing backend processes of web applications, developing & consuming REST API's. NodeJS & Express
                 are the foundations of my full-stack projects.<br />
