Changed styling to dar

--- a/index.html
+++ b/index.html
@@ -62,29 +62,29 @@
         </div>
       </div>
     </section>
-    <section class="bg-white">
-      <h1 class="text-light text-center bg-dark py-5">Stack</h1>
+    <section class="bg-dark">
+      <h1 class="text-light text-center bg-dark pt-5">Stack</h1>
       <div class="container py-5 d-flex flex-column">
-        <div class="frontend d-md-flex align-items-sm-start py-5" id="frontend">
-          <img class="d-none d-md-block backend-image align-self-start py-5 mr-5 w-50" src="./img/createive.svg" alt="" />
+        <div class="frontend d-md-flex align-items-sm-start" id="frontend">
+          <img class="d-none d-lg-block backend-image align-self-start py-5 mr-5 w-50" src="./img/createive.svg" alt="" />
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
-              <h1 class="display-4">Frontend Technologies</h1>
-              <p class="lead">
+              <h1 class="display-4 text-white">Frontend Technologies</h1>
+              <p class="lead my-sm-3">
                 <span class="text-white px-3 py-1 bg-html">HTML</span>
-                <span class="text-white px-3 py-1 bg-css">CSS</span>
-                <span class="text-white px-3 py-1 bg-bootstrap fw-bolder">Bootstrap</span>
-                <span class="bg-js text-dark px-3 py-1 fw-bold">JS</span>
-                <span class="text-white px-3 py-1 bg-react fw-bolder">React</span>
+                <span class="text-white px-3 py-1  bg-css">CSS</span>
+                <span class="text-white px-3 py-1  bg-bootstrap fw-bolder">Bootstrap</span>
+                <span class="bg-js text-dark px-3 py-1  fw-bold">JS</span>
+                <span class="text-white px-3 py-1  bg-react fw-bolder">React</span>
               </p>
               <hr class="my-4" />
-              <p class="h5 fw-light">
+              <p class="bg-vlow h4 fw-light text-white pt-3 px-2">
                 Designing and styling pleasing UI features for web applications relies on my creativity and great attention to detail. I have developed the following frontend skills from developing my projects:
-                <ul class="list-unstyled">
-                  <li class="px-3">Blueprinting UI sections</li>
-                  <li class="px-3">Designing colour schemes</li>
-                  <li class="px-3">Building UI elements</li>
-                  <li class="px-3">Adding functionality to components</li>
+                <ul class="frontend-list-section bg-vlow text-white position-relative pt-3">
+                  <li class="px-3 py-1 h5 fw-lighter">Blueprinting UI sections</li>
+                  <li class="px-3 py-1 h5 fw-lighter">Designing colour schemes</li>
+                  <li class="px-3 py-1 h5 fw-lighter">Building UI elements</li>
+                  <li class="px-3 py-1 h5 fw-lighter">Adding functionality to components</li>
                 </ul>
               </p>
             </div>
@@ -92,56 +92,56 @@
           </div>
         </div>
         <hr>
-        <div class="backend d-md-flex d-sm-flex align-items-sm-start py-5" id="backend">
+        <div class="backend d-md-flex d-sm-flex align-items-sm-start py-5 text-white" id="backend">
           <img
-            class="d-none d-md-block backend-image align-self-start py-5 mt-5 w-50"
+            class="d-none d-lg-block backend-image align-self-start py-5 mt-5 w-50"
             src="./img/server-cluster-light.svg"
             alt=""
           />
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4">Backend Technologies</h1>
-              <p class="lead">
-                <span class="text-white px-3 py-1 bg-nodejs">Node JS</span>
-                <span class="text-dark px-3 py-1 bg-express fw-bolder shadow">Express</span>
-                <span class="text-white px-3 py-1 bg-mongodb fw-bolder">MongoDB</span>
-                <span class="text-white px-3 py-1 bg-mongoose fw-bold">Mongoose</span>
-                <span class="text-white px-3 py-1 bg-jwt fw-bold">JWT</span>
+              <p class="lead py-sm-3">
+                <span class="text-white px-2 py-1 bg-nodejs">Node JS</span>
+                <span class="text-dark px-2 py-1 bg-express fw-bolder shadow">Express</span>
+                <span class="text-white px-2 py-1 bg-mongodb fw-bolder">MongoDB</span>
+                <span class="text-white px-2 py-1 bg-mongoose fw-bold">Mongoose</span>
+                <span class="text-white px-2 py-1 bg-jwt fw-bolder">JWT</span>
               </p>
               <hr class="my-4" />
-              <p class="h5 fw-light">
+              <p class="h4 fw-light bg-vlow pt-3 px-2">
                 I possess a well-rounded knowledge of programming concepts and particularly enjoy building and
                 implementing backend processes of web applications, developing & consuming REST API's. NodeJS & Express
                 are the foundations of my full-stack projects.<br />
               </p>
             </div>
-            <div class="logo-container d-lg-flex flex-row position-relative">
+            <div class="logo-container position-relative bg-vlow d-none d-lg-flex flex-row position-relative">
               <a href="https://nodejs.org/en/">
                 <img
                   src="/img/nodejs-icon.svg"
                   alt=""
-                  class="node-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                  class="node-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
                 />
               </a>
               <a href="https://www.mongodb.com/">
                 <img
                   src="./img/mongodb-icon.svg"
                   alt=""
-                  class="mongo-icon bg-white shadow rounded position-absolute mx-2 px-3"
+                  class="mongo-icon bg-white shadow-lg rounded position-absolute mx-2 px-3"
                 />
               </a>
               <a href="https://jwt.io">
                 <img
                   src="./img/jwt-icon-sm.svg"
                   alt=""
-                  class="jwt-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                  class="jwt-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
                 />
               </a>
               <a href="https://expressjs.com/">
                 <img
                   src="./img/express-icon.svg"
                   alt=""
-                  class="express-icon bg-white shadow rounded position-absolute mx-2 p-3"
+                  class="express-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
                 />
               </a>
             </div>
