--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a href="#technologies" class="nav-link">Technologies</a></li>
             <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#updates" class="nav-link">Updates</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <section class="p-5 h-auto bg-image" style="background-image: url('./img/forest-night-.png')">
+    <section class="p-5 h-auto bg-image" style="background-image: url('./img/forest.png')">
       <div class="container py-5">
         <div class="d-block d-sm-flex flex-lg-row flex-sm-column py-5">
           <h1 class="landing-title text-white w-75 py-5">
-            Welcome to <span class="bg-purple px-lg-3">Jake Whatling's</span> corner of the internet
+            Welcome to <span class="bg-blueaccent px-lg-3">Jake Whatling's</span> corner of the internet
           </h1>
-          <div class="bg-purple-low w-auto rounded my-5 py-3">
-            <h2 class="text-white px-lg-5 px-2 py-3">
+          <div class="bg-blueaccent w-auto rounded my-5 py-3 shadow-lg">
+            <h2 class="text-white px-lg-5 px-2 py-3 landing-title">
               The
               <span class="text-white h1">Hub</span>
               for:
@@ -45,28 +46,27 @@
             <ul class="list-unstyled">
               <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
                 <h4>Showcasing</h4>
-                <h4 class="bg-white text-purple px-2 mx-2">Projects</h4>
+                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Projects</h4>
               </li>
               <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
                 <h4>Tracking my</h4>
-                <h4 class="bg-white text-purple px-2 mx-2">Skills</h4>
+                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Skills</h4>
               </li>
               <li
                 class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly justify-content-sm-start align-items-center"
               >
                 <h4>Publishing</h4>
-                <h4 class="bg-white text-purple px-2 mx-2">Updates</h4>
+                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Updates</h4>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-dark">
+    <section class="bg-dark" id='technologies'>
       <h1 class="text-light text-center bg-dark pt-5">Stack</h1>
       <div class="container py-5 d-flex flex-column">
         <div class="frontend d-md-flex align-items-sm-start" id="frontend">
-          <img class="d-none d-lg-block backend-image align-self-start py-5 mr-5 w-50" src="./img/createive.svg" alt="" />
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4 text-white">Frontend Technologies</h1>
@@ -74,94 +74,134 @@
                 <span class="text-white px-3 py-1 bg-html">HTML</span>
                 <span class="text-white px-3 py-1  bg-css">CSS</span>
                 <span class="text-white px-3 py-1  bg-bootstrap fw-bolder">Bootstrap</span>
-                <span class="bg-js text-dark px-3 py-1  fw-bold">JS</span>
+                <span class="text-dark px-3 py-1 bg-js fw-bold">JS</span>
                 <span class="text-white px-3 py-1  bg-react fw-bolder">React</span>
               </p>
               <hr class="my-4" />
-              <p class="bg-vlow h4 fw-light text-white pt-3 px-2">
-                Designing and styling pleasing UI features for web applications relies on my creativity and great attention to detail. I have developed the following frontend skills from developing my projects:
-                <ul class="frontend-list-section bg-vlow text-white position-relative pt-3">
-                  <li class="px-3 py-1 h5 fw-lighter">Blueprinting UI sections</li>
-                  <li class="px-3 py-1 h5 fw-lighter">Designing colour schemes</li>
-                  <li class="px-3 py-1 h5 fw-lighter">Building UI elements</li>
-                  <li class="px-3 py-1 h5 fw-lighter">Adding functionality to components</li>
-                </ul>
-              </p>
+              <div class="d-flex flex-column bg-vlow">
+
+                <p class="h4 fw-light text-white pt-3 px-2 lh-base">
+                  Designing and styling <span class="bg-blueaccent px-2 fw-bolder">pleasing</span> UI features for web applications relies on strong <span class="bg-blueaccent px-2 fw-bolder">creativity</span> skills and precise attention to detail. My frontend skills include:
+                  <ul class="frontend-list-section text-white position-relative py-3">
+                    <li class="px-3 py-1 h5 fw-lighter">Blueprinting modern UI sections</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Designing attractive colour schemes</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Building UI elements</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Adding functionality to components</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Linking the UI to the backend</li>
+                  </ul>
+                </p>
+              </div>
+              
             </div>
             <div class="logo-container d-lg-flex flex-row position-relative"></div>
           </div>
+          <img class="d-none d-lg-block backend-image align-self-start pt-5 mr-5 w-50" src="./img/createive.svg" alt="" />
         </div>
         <hr>
         <div class="backend d-md-flex d-sm-flex align-items-sm-start py-5 text-white" id="backend">
           <img
-            class="d-none d-lg-block backend-image align-self-start py-5 mt-5 w-50"
+            class="d-none d-lg-block backend-image align-self-start pt-5 mt-5 w-50"
             src="./img/server-cluster-light.svg"
             alt=""
           />
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4">Backend Technologies</h1>
-              <p class="lead py-sm-3">
+              <p class="lead py-sm-3 my-lg-0 my-md-2">
                 <span class="text-white px-2 py-1 bg-nodejs">Node JS</span>
                 <span class="text-dark px-2 py-1 bg-express fw-bolder shadow">Express</span>
                 <span class="text-white px-2 py-1 bg-mongodb fw-bolder">MongoDB</span>
                 <span class="text-white px-2 py-1 bg-mongoose fw-bold">Mongoose</span>
                 <span class="text-white px-2 py-1 bg-jwt fw-bolder">JWT</span>
+                <span class="text-white px-2 py-1 bg-json fw-bolder">JSON</span>
               </p>
               <hr class="my-4" />
-              <p class="h4 fw-light bg-vlow pt-3 px-2">
-                I possess a well-rounded knowledge of programming concepts and particularly enjoy building and
-                implementing backend processes of web applications, developing & consuming REST API's. NodeJS & Express
-                are the foundations of my full-stack projects.<br />
-              </p>
-            </div>
-            <div class="logo-container position-relative bg-vlow d-none d-lg-flex flex-row position-relative">
-              <a href="https://nodejs.org/en/">
-                <img
-                  src="/img/nodejs-icon.svg"
-                  alt=""
-                  class="node-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
-                />
-              </a>
-              <a href="https://www.mongodb.com/">
-                <img
-                  src="./img/mongodb-icon.svg"
-                  alt=""
-                  class="mongo-icon bg-white shadow-lg rounded position-absolute mx-2 px-3"
-                />
-              </a>
+              <div class="d-flex flex-column bg-vlow">
+                <p class="h4 fw-light pt-3 px-3">
+                  Interested in building and
+                  implementing backend processes of web applications. Versed with programming web servers as well as developing & consuming <span class="bg-blueaccent px-2">REST API's.</span> NodeJS & Express
+                  are my preferred tools when building full stack projects.<br /><br />
+                  I am experienced with both <span class="bg-blueaccent px-3">SQL/NoSQL</span> database solutions, with my preference being MongoDB for the familiar JSON document format.
+                </p>
+                <div class="logo-container position-relative d-none d-xl-flex flex-row position-relative">
+                  <a href="https://nodejs.org/en/">
+                    <img
+                    src="/img/nodejs-icon.svg"
+                    alt=""
+                    class="node-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
+                    />
+                  </a>
+                  <a href="https://www.mongodb.com/">
+                    <img
+                    src="./img/mongodb-icon.svg"
+                    alt=""
+                    class="mongo-icon bg-white shadow-lg rounded position-absolute mx-2 px-3"
+                    />
+                  </a>
               <a href="https://jwt.io">
                 <img
-                  src="./img/jwt-icon-sm.svg"
-                  alt=""
-                  class="jwt-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
+                src="./img/jwt-icon-sm.svg"
+                alt=""
+                class="jwt-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
                 />
               </a>
               <a href="https://expressjs.com/">
                 <img
-                  src="./img/express-icon.svg"
-                  alt=""
-                  class="express-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
+                src="./img/express-icon.svg"
+                alt=""
+                class="express-icon bg-white shadow-lg rounded position-absolute mx-2 p-3"
                 />
               </a>
+            </div>
+          </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="py-5 bg-dark" id='projects'>
+      <div class="container">
+        <h1 class="text-light text-center">Projects</h1>
+      </div>
+    </section>
+    <section class="py-5 bg-white" id='updates'>
+      <div class="container">
+        <h1 class="text-dark text-center">Updates</h1>
+        <div class="d-flex flex-column py-5">
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto py-5">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm mx-4">
+              <h4 class="fw-lighter text-white mx-2 px-3">February</h4>
+              <p class="fw-light h1 text-white mx-2 px-3">12</p>
+              <h5 class="fw-lighter text-white mx-2 px-3">2022</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-50">Update Title</h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="py-5 bg-dark">
-      <div class="container">
-        <h1 class="text-light text-center">Projects</h1>
-      </div>
-    </section>
-    <section class="py-5 bg-dark">
-      <div class="container">
-        <h1 class="text-light text-center">Updates</h1>
-      </div>
-    </section>
-    <section class="py-5 bg-dark">
-      <div class="container">
+    <section class="py-5 bg-dark" id='contact'>
+      <div class="container ">
         <h1 class="text-light text-center">Contact</h1>
+        <div class="list-group w-50 mx-auto py-3">
+          <div class="list-group-item text-dark"><span class="fw-bold px-4 h5 user-select-none">Telephone:</span><p class="lead d-inline">07948190365</p></div>
+          <div class="list-group-item text-dark"><span class="fw-bold px-4 h5 user-select-none">Email Address:</span><p class="lead d-inline">jakewhatling2002@gmail.com</p></div>
+        </div>
+        <div class="d-flex flex-row justify-content-center align-items-center w-25 mx-auto">
+          <a href="https://linkedin.com/in/jake-whatling/">
+            <h1 class="text-white px-3">
+              <i class="bi-linkedin"></i>
+            </h1> 
+          </a>
+          <a href="https://github.com/siskiuslide">
+          <h1 class="text-white px-3">
+              <i class="bi-github"></i>
+            </h1>
+            </a>
+        </div>
       </div>
     </section>
     <script
