Added button to updates section to show more/less

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               <div class="d-flex flex-column bg-vlow">
                 <p class="h4 fw-light pt-3 px-3">
                   Interested in building and
-                  implementing backend processes of web applications. Versed with programming web servers as well as developing & consuming <span class="bg-blueaccent px-2">REST API's.</span> NodeJS & Express
+                  implementing backend processes of web applications. Versed with programming web servers as well as developing & consuming <span class="bg-blueaccent px-2 fw-bolder">REST API's.</span> NodeJS & Express
                   are my preferred tools when building full stack projects.<br /><br />
-                  I am experienced with both <span class="bg-blueaccent px-3">SQL/NoSQL</span> database solutions, with my preference being MongoDB for the familiar JSON document format.
+                  I am experienced with both <span class="bg-blueaccent px-3 fw-bolder">SQL/NoSQL</span> database solutions, with my preference being MongoDB for the familiar JSON document format.
                 </p>
                 <div class="logo-container position-relative d-none d-xl-flex flex-row position-relative">
                   <a href="https://nodejs.org/en/">
@@ -168,18 +168,52 @@
       <div class="container">
         <h1 class="text-dark text-center">Updates</h1>
         <div class="d-flex flex-column py-5">
-          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto py-5">
-            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm mx-4">
-              <h4 class="fw-lighter text-white mx-2 px-3">February</h4>
-              <p class="fw-light h1 text-white mx-2 px-3">12</p>
-              <h5 class="fw-lighter text-white mx-2 px-3">2022</h5>
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+              <h4 class="fw-lighter text-white px-2">November</h4>
+              <h5 class="fw-lighter h2 text-white px-2">2021</h5>
             </div>
             <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
-              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-50">Update Title</h3>
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">MTA Networking Fundamentals</h3>
               <hr class="hr-dark w-25 mx-3">
               <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
             </div>
           </div>
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+              <h4 class="fw-lighter text-white px-2">September</h4>
+              <h5 class="fw-lighter h2 text-white px-2">2021</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">Control - Development begins</h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+            </div>
+          </div>
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+              <h4 class="fw-lighter text-white px-2">June</h4>
+              <h5 class="fw-lighter h2 text-white px-2">2021</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">City & Guilds L3 Coding & Logic</h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+            </div>
+          </div>
+          <div class="update d-none flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+              <h4 class="fw-lighter text-white px-2">March</h4>
+              <!-- <p class="fw-light h1 text-whi-2 p2-3">12</p> -->
+              <h5 class="fw-lighter h2 text-white mx-2 px-3">2021</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">City & Guilds L3 Cloud Services</h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+            </div>
+          </div>
+          <button class="moreUpdates button p-2 text-blueaccent bg-white w-25 mx-auto">More</button>
         </div>
       </div>
     </section>
