Added more updates and styling

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
               for:
             </h2>
             <ul class="list-unstyled">
-              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
+              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-start align-items-center">
                 <h4>Showcasing</h4>
                 <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Projects</h4>
               </li>
-              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly align-items-center">
+              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-start align-items-center">
                 <h4>Tracking my</h4>
                 <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Skills</h4>
               </li>
               <li
-                class="text-white px-lg-5 px-3 h5 d-flex justify-content-lg-evenly justify-content-sm-start align-items-center"
+                class="text-white px-lg-5 px-3 h5 d-flex justify-content-start justify-content-sm-start align-items-center"
               >
                 <h4>Publishing</h4>
                 <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Updates</h4>
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section class="bg-dark" id='technologies'>
-      <h1 class="text-light text-center bg-dark pt-5">Stack</h1>
+      <h1 class="text-light text-center bg-dark pt-2">Stack</h1>
       <div class="container py-5 d-flex flex-column">
         <div class="frontend d-md-flex align-items-sm-start" id="frontend">
           <div class="d-flex flex-column mx-5">
@@ -72,14 +72,13 @@
               <h1 class="display-4 text-white">Frontend Technologies</h1>
               <p class="lead my-sm-3">
                 <span class="text-white px-3 py-1 bg-html">HTML</span>
-                <span class="text-white px-3 py-1  bg-css">CSS</span>
-                <span class="text-white px-3 py-1  bg-bootstrap fw-bolder">Bootstrap</span>
-                <span class="text-dark px-3 py-1 bg-js fw-bold">JS</span>
-                <span class="text-white px-3 py-1  bg-react fw-bolder">React</span>
+                <span class="text-white px-3 py-1 bg-css">CSS</span>
+                <span class="text-white px-3 py-1 bg-bootstrap fw-bolder">Bootstrap</span>
+                <span class="text-dark  px-3 py-1 bg-js fw-bold">JS</span>
+                <span class="text-white px-3 py-1 bg-react fw-bolder">React</span>
               </p>
               <hr class="my-4" />
               <div class="d-flex flex-column bg-vlow">
-
                 <p class="h4 fw-light text-white pt-3 px-2 lh-base">
                   Designing and styling <span class="bg-blueaccent px-2 fw-bolder">pleasing</span> UI features for web applications relies on strong <span class="bg-blueaccent px-2 fw-bolder">creativity</span> skills and precise attention to detail. My frontend skills include:
                   <ul class="frontend-list-section text-white position-relative py-3">
@@ -87,11 +86,10 @@
                     <li class="px-3 py-1 h5 fw-lighter">Designing attractive colour schemes</li>
                     <li class="px-3 py-1 h5 fw-lighter">Building UI elements</li>
                     <li class="px-3 py-1 h5 fw-lighter">Adding functionality to components</li>
-                    <li class="px-3 py-1 h5 fw-lighter">Linking the UI to the backend</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Designing marketing websites</li>
                   </ul>
                 </p>
-              </div>
-              
+              </div>              
             </div>
             <div class="logo-container d-lg-flex flex-row position-relative"></div>
           </div>
@@ -109,7 +107,7 @@
               <h1 class="display-4">Backend Technologies</h1>
               <p class="lead py-sm-3 my-lg-0 my-md-2">
                 <span class="text-white px-2 py-1 bg-nodejs">Node JS</span>
-                <span class="text-dark px-2 py-1 bg-express fw-bolder shadow">Express</span>
+                <span class="text-dark  px-2 py-1 bg-express fw-bolder shadow">Express</span>
                 <span class="text-white px-2 py-1 bg-mongodb fw-bolder">MongoDB</span>
                 <span class="text-white px-2 py-1 bg-mongoose fw-bold">Mongoose</span>
                 <span class="text-white px-2 py-1 bg-jwt fw-bolder">JWT</span>
@@ -168,61 +166,99 @@
       <div class="container">
         <h1 class="text-dark text-center">Updates</h1>
         <div class="d-flex flex-column py-5">
-          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
-            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded mx-auto my-3">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
+              <h4 class="fw-lighter text-white px-2">January</h4>
+              <h5 class="fw-lighter h2 text-white px-2">2022</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 ">Control app - Users system <span class="bg-success text-white h5 fw-light rounded px-2 mx-2">Project</span></h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead"></p>
+            </div>
+          </div>
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded mx-auto my-3">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
+              <h4 class="fw-lighter text-white px-2">December</h4>
+              <h5 class="fw-lighter h2 text-white px-2">2021</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">Control app - Marketing page <span class="bg-success text-white h5 fw-light rounded px-2 mx-2">Project</span></h3>
+              <hr class="hr-dark w-25 mx-3">
+              <p class="text-dark px-3 lead"></p>
+              <a href="https://controlhe.netlify.app/" class="text-blueaccent px-3 lead"><p>View the site<i class="bi-link px-1"></i></p></a>
+            </div>
+          </div>
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded mx-auto my-3">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
               <h4 class="fw-lighter text-white px-2">November</h4>
               <h5 class="fw-lighter h2 text-white px-2">2021</h5>
             </div>
             <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
-              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">MTA Networking Fundamentals</h3>
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">MTA Networking Fundamentals <span class="bg-info text-white h5 fw-light rounded px-2 mx-2">Qualification</span></h3>
               <hr class="hr-dark w-25 mx-3">
-              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis</p>
+              <a href="https://www.credly.com/badges/a723b6a0-416a-414c-8600-45d73eb24871?source=linked_in_profile" class="text-blueaccent px-3 lead"><p>Verification<i class="bi-link px-1"></i></p></a>
             </div>
           </div>
-          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
-            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
               <h4 class="fw-lighter text-white px-2">September</h4>
               <h5 class="fw-lighter h2 text-white px-2">2021</h5>
             </div>
             <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
-              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">Control - Development begins</h3>
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">Control app - Development begins <span class="bg-success text-white h5 fw-lighter rounded px-2 mx-2">Project</span></h3>
               <hr class="hr-dark w-25 mx-3">
-              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+              <p class="text-dark px-3 lead">After discovering the qualities of Hubitat Elevation networks, I finally began writing a web application to host locally which would control devices connected to the hub.</p>
             </div>
           </div>
-          <div class="update d-flex flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3 ">
-            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+          <div class="update d-none flex-lg-row flex-column shadow-lg rounded mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
               <h4 class="fw-lighter text-white px-2">June</h4>
               <h5 class="fw-lighter h2 text-white px-2">2021</h5>
             </div>
             <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
-              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">City & Guilds L3 Coding & Logic</h3>
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">City & Guilds L3 Coding & Logic <span class="bg-info text-white h5 fw-light rounded px-2 mx-2">Qualification</span></h3>
               <hr class="hr-dark w-25 mx-3">
               <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+              <a href="https://www.credly.com/badges/2ec2bd23-36a1-4ad5-8d25-1666b45132c4?source=linked_in_profile" class="text-blueaccent px-3 lead"><p>Verification<i class="bi-link px-1"></i></p></a>
             </div>
           </div>
-          <div class="update d-none flex-lg-row flex-column shadow-lg rounded w-75 mx-auto my-3">
-            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 w-50">
+          <div class="update d-none flex-lg-row flex-column shadow-lg rounded mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
               <h4 class="fw-lighter text-white px-2">March</h4>
-              <!-- <p class="fw-light h1 text-whi-2 p2-3">12</p> -->
-              <h5 class="fw-lighter h2 text-white mx-2 px-3">2021</h5>
+              <h5 class="fw-lighter h2 text-white px-2">2021</h5>
             </div>
             <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
-              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1 w-75">City & Guilds L3 Cloud Services</h3>
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">City & Guilds L3 Cloud Services <span class="bg-info text-white h5 fw-light rounded px-2 mx-2">Qualification</span></h3>
               <hr class="hr-dark w-25 mx-3">
-              <p class="text-dark px-3 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, inventore explicabo. Maxime? Aspernatur perspiciatis ut quia error tempora magni. Assumenda, quasi ipsum neque dolores minima pariatur!</p>
+              <p class="text-dark px-3 lead">I completed the L3 award in Cloud Services. It covered Cloud Models, Services, Strategies, and Disaster Recovery.
+              <a href="https://www.credly.com/badges/5a0aed49-d4d9-455c-94e8-7d1c42f8988f?source=linked_in_profile" class="text-blueaccent px-3 lead"><p>Verification<i class="bi-link px-1"></i></p></a>
+              </p>
             </div>
           </div>
-          <button class="moreUpdates button p-2 text-blueaccent bg-white w-25 mx-auto">More</button>
+          <div class="update d-none flex-lg-row flex-column shadow-lg rounded mx-auto my-3 ">
+            <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2">
+              <h4 class="fw-lighter text-white px-2">August</h4>
+              <!-- <p class="fw-light h1 text-whi-2 p2-3">12</p> -->
+              <h5 class="fw-lighter h2 text-white mx-2 px-3">2020</h5>
+            </div>
+            <div class="updateContent bg-white rounded d-flex flex-column align-self-start justify-content-start">
+              <h3 class="text-dark px-3 py-sm-3 py-md-2 py-lg-1">Started Web Development <span class="bg-warning text-white h5 fw-light rounded px-2 mx-2">Skills</span></h3>
+              <hr class="hr-dark w-25 mx-3"> 
+              <p class="text-dark px-3 lead">I pursued the journey of learning Web Development, beginning with a basic understanding of HTML/CSS from college. I started with making basic marketing pages and features for fictional organisations and websites before adding some basic functionality with JavaScript</p>
+            </div>
+          </div>
+          <button class="moreUpdates button mt-4 p-2 text-blueaccent bg-white w-25 mx-auto">More</button>
         </div>
       </div>
     </section>
     <section class="py-5 bg-dark" id='contact'>
       <div class="container ">
         <h1 class="text-light text-center">Contact</h1>
-        <div class="list-group w-50 mx-auto py-3">
-          <div class="list-group-item text-dark"><span class="fw-bold px-4 h5 user-select-none">Telephone:</span><p class="lead d-inline">07948190365</p></div>
-          <div class="list-group-item text-dark"><span class="fw-bold px-4 h5 user-select-none">Email Address:</span><p class="lead d-inline">jakewhatling2002@gmail.com</p></div>
+        <div class="list-group w-75 mx-auto py-3">
+          <div class="list-group-item text-dark"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Telephone:</span><p class="lead d-inline">07948190365</p></div>
+          <div class="list-group-item text-dark"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Email Address:</span><p class="lead d-inline">jakewhatling2002@gmail.com</p></div>
         </div>
         <div class="d-flex flex-row justify-content-center align-items-center w-25 mx-auto">
           <a href="https://linkedin.com/in/jake-whatling/">
